; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zcp_get.c_get_objset_type_name.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zcp_get.c_get_objset_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"snapshot\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"filesystem\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"volume\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @get_objset_type_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_objset_type_name(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @get_objset_type(i32* %8, i32* %7)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %28

14:                                               ; preds = %2
  %15 = load i32, i32* %7, align 4
  switch i32 %15, label %25 [
    i32 129, label %16
    i32 130, label %19
    i32 128, label %22
  ]

16:                                               ; preds = %14
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @strcpy(i8* %17, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  br label %27

19:                                               ; preds = %14
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @strcpy(i8* %20, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  br label %27

22:                                               ; preds = %14
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @strcpy(i8* %23, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  br label %27

25:                                               ; preds = %14
  %26 = load i32, i32* @EINVAL, align 4
  store i32 %26, i32* %3, align 4
  br label %28

27:                                               ; preds = %22, %19, %16
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %25, %12
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @get_objset_type(i32*, i32*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
